<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/expressionField"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:text=""
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button2" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button3" />

            <Button
                android:id="@+id/buttonPlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonPlus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button4" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button6" />

            <Button
                android:id="@+id/buttonMinus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonMinus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button8" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button9" />

            <Button
                android:id="@+id/buttonMultiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonMultiply" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonOpenBracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonOpenBracket" />

            <Button
                android:id="@+id/button0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/button0" />

            <Button
                android:id="@+id/buttonCloseBracket"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonCloseBracket" />

            <Button
                android:id="@+id/buttonDivide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonDivide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonPoint"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonPoint" />

            <Button
                android:id="@+id/buttonEqual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonEqual" />

            <Button
                android:id="@+id/buttonC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonC" />

            <Button
                android:id="@+id/buttonCE"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:text="@string/buttonCE" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>